--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My site</title>
 </head>
 <body>
-    <h1>This es may GitHub Pages Website!</h1>
+    <h1>This is my GitHub Pages Website!</h1>
 </body>
 </html>
